# winnow

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py  data.json  results.md
docs/: index.html
docs/pysrc/winnow/: __init__.py  bm25.py  compressor.py  text.py  tokenizer.py
examples/: quickstart.py
src/winnow/: cli.py  types.py  vectorize.py
tests/: test_benchmark.py  test_bm25.py  test_cli.py  test_compressor.py  test_tokenizer.py  test_vectorize.py
